--- a/des.css
+++ b/des.css
@@ -9,3 +9,34 @@ height: 117px;
 box-shadow: 1px 2px 2px 2px #888888;
 margin: 280 200 200 550;
 }
+
+#top
+{
+width:100%;
+height:250px;
+}
+
+#bottom
+{
+width:1250px;
+height:850px;
+background-color:#FFFFFF
+}
+
+#banner
+{
+width:1250px;
+height:250px; 
+}
+
+#div4
+{
+box-shadow: 1px 2px 2px 2px #888888;
+	height:50%;
+}
+
+#div5
+{
+box-shadow: 1px 2px 2px 2px #888888;
+height:33%;
+}
